--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
     <h1 class="title">
         Todo-List
     </h1>
-    <form action="/" method="post" autocomplete="off">
+    <form action="/profile" method="post" autocomplete="off">
         <input type="text" placeholder="Add todos..." name="todoValue" required>
         <button type="submit" class="submitbutton">Add</button>
     </form>
@@ -20,11 +20,11 @@
     <% if(data) {  %>
       <%  data.forEach(todoValue =>  { %>
         <% console.log(todoValue) %>
-        <div class="listitem" > <%= todoValue.todo %> </div> 
+        <div class="listitem" > <%= todoValue %> </div> 
     <% })   %>
     <%    }  %>
 
     
-
+ 
 </body>
 </html>
