--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,8 @@
     <h1 class="title">
         Welcome to Todo-List!
     </h1>
-
     <div class="button-container">
-        <a href="/profile"><button class="login">Login/Signup</button></a> 
-        <a href="/guest"><button class="login">Continue as Guest</button></a>
+        <a href="/profile"><button class="login">Login/Signup to continue</button></a> 
     </div>
  
 </body>
