added logout button

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,6 +11,7 @@
     <h1 id="welcomeMessage">
         Welcome, <%= user.name %>
     </h1>
+    <a href="/logout"><button class="logout">Logout</button></a>
     <div class="todobar">
         <div>
             <h1>Add a new todo...</h1>
