--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,3 +113,19 @@ label {
     width: 100px;
     text-align: center;
 }
+
+.logout {
+    position: fixed;
+    right: 30px;
+    top: 30px;
+    width: 100px;
+    height: 50px;
+    background-color:rgb(173, 219, 232);
+    font-size: 25px;
+    color: rgb(7, 55, 68);
+    cursor: pointer;
+}
+
+.logout:hover {
+    background-color: rgb(91, 180, 204);
+}
